--- a/files/index.html
+++ b/files/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <style>
+            canvas {
+                border: 1px solid black;
+                width: 1024px;
+                height: 1024px;
+                position: absolute;
+            }
+        </style>
+        <script src="init.js"></script>
+        <script src="events.js"></script>
+        <script src="render.js"></script>
+    </head>
     <body>
         <h1>
-            Test 01!
+            Minecraft Blueprint Editor
         </h1>
+        <div class="canvas_container">
+            <canvas id="overlay" width="2048" height="2048"></canvas>
+            <canvas id="base"    width="2048" height="2048"></canvas>
+        </div>
     </body>
 </html>
